# AndisMCP

./: .gitignore  README.md  REQUIREMENTS.md  SETUP.md  package.json  playwright.config.ts  pyproject.toml  test_single_page.py
config/: playwright.config.ts  requirements.txt  tsconfig.json
scripts/: setup_all.sh  start_mcp.sh
src/: __init__.py  mcp_server.py
src/core/: colors.py  config.py  pipeline.py  prompts.py  schemas.py
src/tools/: __init__.py  crawl_links.py  extract_model.py  generate_pom.py  generate_tests.py  generate_tests_ts.py  repair.py  scan_site.py  verify_pom.py
tests/: homepage.spec.ts
